fea-rs/test-data/compile-tests/mini-latin/bad/stylistic_set_names.ERR
error: featureNames block only valid in ss01-ss20 features
in ./test-data/compile-tests/mini-latin/bad/stylistic_set_names.fea at 3:4
  | 
3 |     featureNames {
  |     ^^^^^^^^^^^^

error: featureNames must precede any rules
in ./test-data/compile-tests/mini-latin/bad/stylistic_set_names.fea at 10:4
   | 
10 |     featureNames {
   |     ^^^^^^^^^^^^
